# meals

./: .gitignore  LICENSE  PLAN.md  README.md  justfile  pyproject.toml  recipes.yaml  timings.yaml
scripts/: plan_meal.py  populate_db.py
src/: main.py
src/meals/: __init__.py  app.py  auth.py  crud.py  database.py  exceptions.py  schemas.py  tables.py
src/meals/api/: __init__.py
src/meals/api/v1/: __init__.py  routes.py
src/meals/database/: __init__.py  models.py  repository.py  session.py
src/meals/web/: __init__.py  components.py  core.py  index.py  new.py  planner.py  routes.py  timings.py  views.py
tests/: conftest.py  test_api.py  test_app.py  test_schemas.py  test_web.py
tests/__inline_snapshot__/test_web/TestNewRecipeAPI.test_bad_ingredient/: 86353837-4246-4783-bba1-b1f2a9c6d326.txt
tests/__inline_snapshot__/test_web/TestNewRecipeAPI.test_get_new_page/: ac29b30e-908a-4923-b547-323a96ac28c4.txt
tests/__inline_snapshot__/test_web/TestNewRecipeAPI.test_new_recipe_success/: 7cc71c6a-a97a-4da6-badb-33e3f217338b.txt
tests/__inline_snapshot__/test_web/TestNewRecipeAPI.test_recipe_exists/: 9d7c702c-8859-4660-812c-7797f6bdc57b.txt
tests/__inline_snapshot__/test_web/TestPlannerAPI.test_get_plan_page/: 6b3bec63-ac97-44ef-bf76-29922cffce88.txt
tests/__inline_snapshot__/test_web/TestPlannerAPI.test_get_summary_table/: fcdd9952-417d-4282-aea9-9fb83decbe44.txt
tests/__inline_snapshot__/test_web/TestPlannerAPI.test_get_summary_table_unplanned_recipe/: d5f95a03-1289-49bc-adcb-4bdd63929b72.txt
tests/__inline_snapshot__/test_web/TestPlannerAPI.test_get_weeks_plan/: ebe86d54-196e-4401-ae8a-a7738a8f302e.txt
tests/__inline_snapshot__/test_web/TestPlannerAPI.test_meals_like_empty_string/: d74c18ec-7300-4d4c-b858-f08ecf9672f9.txt
tests/__inline_snapshot__/test_web/TestPlannerAPI.test_meals_like_no_match/: a0b193ca-c6a8-4051-b067-a1e4bd0b5997.txt
tests/__inline_snapshot__/test_web/TestRecipesAPI.test_edit_recipe/: 1c790be2-234d-4760-a157-e9f5674bc83e.txt
tests/__inline_snapshot__/test_web/TestRecipesAPI.test_get_recipe/: 435bfb88-5a75-41c2-84ee-a75e8237f184.txt
tests/__inline_snapshot__/test_web/TestRecipesAPI.test_get_recipe_names/: ee140c45-c153-492c-9ed1-3d0629cd9ffd.txt
tests/__inline_snapshot__/test_web/TestRecipesAPI.test_get_recipes/: c27cf730-5ec8-49ff-a1a0-293cc267fc4f.txt
tests/__inline_snapshot__/test_web/TestRecipesAPI.test_update_recipe/: 6020747d-93b4-4204-a629-05d1397c361c.txt
tests/__inline_snapshot__/test_web/TestRecipesAPI.test_update_recipe_error/: 5082a7a0-a5fb-4135-a0ea-2923a83f682b.txt
tests/__inline_snapshot__/test_web/TestTimingsAPI.test_get_existing_timings/: d2116b7b-a0d7-4b66-8e69-b8a6e91a77d1.txt
tests/__inline_snapshot__/test_web/TestTimingsAPI.test_get_index/: 4f1d948c-f93c-45aa-8a23-9f6313ce0029.txt
tests/__inline_snapshot__/test_web/TestTimingsAPI.test_get_placeholder_timings/: c7fc40cc-df47-4d31-b9d6-8e854e9042f3.txt
tests/__inline_snapshot__/test_web/TestTimingsAPI.test_update_timings/: 2646a836-6c9e-4f73-a93c-b47f075457f0.txt
tests/__inline_snapshot__/test_web/TestTimingsAPI.test_update_timings_failure/: f577cc02-d394-4019-b6fa-50584bbebff0.txt
tests/__inline_snapshot__/test_web/TestViewAPI.test_get_index/: c2fba73d-0743-47cb-93b3-13735fa031f8.txt
tests/__inline_snapshot__/test_web/TestViewAPI.test_get_new_recipe/: efb61175-7f7a-4a21-be06-fada95992420.txt
