[project]
name = "meals"
description = "For managing household meal plans."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.119.0",
    "fasthx[htmy]>=3.0.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
    "pydantic-yaml>=1.6.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
]
license = "MIT"
authors = [{ name = "Benjamin Askew-Gale" }]

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typing" },
]
lint = ["import-linter>=2.5.2", "ruff>=0.14.1"]
test = [
    "pytest>=8.4.1",
    "pytest-randomly>=4.0.1",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.2.0",
    "inline-snapshot>=0.31.0",
    "time-machine>=3.1.0",
]
typing = ["mypy>=1.18.2"]
typing-test = [{ include-group = "test" }, { include-group = "typing" }]

[project.scripts]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "ISC001", "ANN401", "D101", "FIX002", "TD", "DTZ"]

[tool.ruff.lint.per-file-ignores]
# Ignore all directories named `tests`.
"tests/**" = ["D", "S", "ANN", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
exclude = "build"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "meals.*"
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
strict = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_subclassing_any = false

[tool.coverage.report]
exclude_also = [
    "if t.TYPE_CHECKING",
    "@t.overload",
    "@abstractmethod",
    "if TYPE_CHECKING",
    "def __repr__",
]
show_missing = true
omit = ["main.py"]

[tool.coverage.run]
branch = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning::",         # ignore deprecations from all modules
    "default::DeprecationWarning:meals.*:", # except from mymodule
    "ignore::UserWarning",
]
addopts = "--cov=src/ --cov-report="
asyncio_mode = "auto"

[tool.importlinter]
root_package = "meals"

[[tool.importlinter.contracts]]
name = "Layers"
type = "layers"
layers = ["meals.api | meals.web", "meals.database"]

[tool.inline-snapshot]
format-command = "uv run ruff format --stdin-filename {filename}"
